<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Barcamp Bangalore</string>
    <string name="tweets">Tweets</string>
    <string name="about">About</string>
    <string name="connection_error_and_try_again">Connection Error!! Check if you have internet connectivity and try again.</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="error_title">Error!!!</string>
    <string name="loading">Loading…</string>
    <string name="choose_app">Choose an App</string>
    <string name="share_using">Share Using…</string>
    <string name="message_hint">type your message here…</string>
    <string name="app_title_text">Barcamp Bangalore Spring 2014</string>
    <string name="about_message">Barcamp Bangalore is an open event focused around people, ideas and collaboration. There is no fixed format and agenda. If you have an interesting topic to share or want to collaborate with folks with a variety of experience, Barcamp is the place for you.
\n\n
Since its inception in Bangalore in 2006, BCB has been a place for awesome people with ideas in their heads to talk and share or just hang out with their peers and friends.You can expect sessions on variety of topics like\n
  •   Technology\n
  •   Design\n
  •   Startups &amp; Entrepreneurship\n
  •   Business &amp; Management\n
  •   Photography\n
  •   User Experience\n
  •   Your life learnings\n
  •   and a lot more...\n
  \n
  Head to http://barcampbangalore.org for more info.    </string>
    <string name="notification_settings_text">Notification (Will check for updates every 10mins)</string>
    <string name="agenda">Agenda</string>
    <string name="updates">Updates</string>
    <string name="venue">Venue</string>
    <string name="alert_me_10_mins_before_start">"   "Alert before this session start</string>
    <string name="share_now">Share Now</string>
    <string name="no_session">Slow down buddy\n\nNo sessions registered for this slot yet.\n\nPlease come back again</string>
    <string name="when">When:</string>
    <string name="where">Where:</string>
    <string name="sampletext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="by_user">By user</string>
    <string name="at_symbol"> \@ </string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="i_am_attending">I am attending</string>
    <string name="location_map">Location Map</string>
    <string name="internal_venue">Venue Map</string>
    <string name="for_barcamp_bangalore">Originally made for :</string>
    <string name="login">Login</string>
    <string name="do_not_login"><u>I am just trying things out</u></string>

</resources>