<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#fff"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <ScrollView
                android:id="@+id/scrollView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/share_using"
                        android:textColor="#000" />

                    <Spinner
                        android:id="@+id/shareTypeSpinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:prompt="@string/choose_app" />

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="top|left"
                        android:hint="@string/message_hint"
                        android:inputType="textMultiLine"
                        android:lines="4"
                        android:nextFocusLeft="@+id/editText1"
                        android:nextFocusUp="@+id/editText1" />

                    <TextView
                        android:id="@+id/charsLeftTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:paddingRight="20dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000" />

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:text="@string/share_now" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
   </FrameLayout>
    <!-- The navigation drawer -->

    <FrameLayout
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/navgiation_background"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" >

        <ImageView
            android:id="@+id/imageViewShadow"
            android:layout_width="10dp"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:layout_marginLeft="3dp"
            android:src="@drawable/dropshadow" />

        <ScrollView
            android:id="@+id/scrollView12"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/nav_agenda"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/navigation_item_background_drawable"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:paddingBottom="5dp"
                        android:paddingLeft="0dp"
                        android:paddingTop="5dp" >

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="50dp"
                            android:layout_height="40dp"
                            android:background="@drawable/navigation_icon_background"
                            android:src="@drawable/agenda" />

                        <TextView
                            android:id="@+id/textView13"
                            style="@style/NavigationTextStyle"
                            android:paddingLeft="10dp"
                            android:text="@string/agenda" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nav_tweets"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/navigation_item_background_drawable"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:paddingBottom="5dp"
                        android:paddingLeft="0dp"
                        android:paddingTop="5dp" >

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="50dp"
                            android:layout_height="40dp"
                            android:background="@drawable/navigation_icon_background"
                            android:src="@drawable/tweet" />

                        <TextView
                            android:id="@+id/textView2"
                            style="@style/NavigationTextStyle"
                            android:paddingLeft="10dp"
                            android:text="@string/tweets" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nav_update"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/navigation_item_background_drawable"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:paddingBottom="5dp"
                        android:paddingLeft="0dp"
                        android:paddingTop="5dp" >

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="50dp"
                            android:layout_height="40dp"
                            android:background="@drawable/navigation_icon_background"
                            android:src="@drawable/updates" />

                        <TextView
                            android:id="@+id/textView3"
                            style="@style/NavigationTextStyle"
                            android:paddingLeft="10dp"
                            android:shadowColor="@android:color/black"
                            android:text="@string/updates" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/navigation_item_background_drawable"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/nav_venue"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:paddingBottom="5dp"
                        android:paddingLeft="0dp"
                        android:paddingTop="5dp" >

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="50dp"
                            android:layout_height="40dp"
                            android:background="@drawable/navigation_icon_background"
                            android:src="@drawable/venue" />

                        <TextView
                            android:id="@+id/textView4"
                            style="@style/NavigationTextStyle"
                            android:paddingLeft="10dp"
                            android:text="@string/venue" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nav_internal_venue_map"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/navigation_item_background_drawable"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:paddingBottom="5dp"
                        android:paddingLeft="0dp"
                        android:paddingTop="5dp" >

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="50dp"
                            android:layout_height="40dp"
                            android:background="@drawable/navigation_icon_background"
                            android:src="@drawable/internal_venue_left" />

                        <TextView
                            android:id="@+id/textView7"
                            style="@style/NavigationTextStyle"
                            android:paddingLeft="10dp"
                            android:text="@string/internal_venue" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nav_about"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/navigation_item_background_drawable"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:paddingBottom="5dp"
                        android:paddingLeft="0dp"
                        android:paddingTop="5dp" >

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="50dp"
                            android:layout_height="40dp"
                            android:background="@drawable/navigation_icon_background"
                            android:src="@drawable/about" />

                        <TextView
                            android:id="@+id/textView5"
                            style="@style/NavigationTextStyle"
                            android:paddingLeft="10dp"
                            android:text="@string/about" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nav_share"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/navigation_item_background_drawable"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:paddingBottom="5dp"
                        android:paddingLeft="0dp"
                        android:paddingTop="5dp" >

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="50dp"
                            android:layout_height="40dp"
                            android:background="@drawable/navigation_icon_background"
                            android:src="@drawable/share" />

                        <TextView
                            android:id="@+id/textView6"
                            style="@style/NavigationTextStyle"
                            android:paddingLeft="10dp"
                            android:text="@string/share" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nav_settings"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/navigation_item_background_drawable"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:paddingBottom="5dp"
                        android:paddingLeft="0dp"
                        android:paddingTop="5dp" >

                        <ImageView
                            android:id="@+id/imageView7w"
                            android:layout_width="50dp"
                            android:layout_height="40dp"
                            android:background="@drawable/navigation_icon_background"
                            android:src="@drawable/settings" />

                        <TextView
                            android:id="@+id/textView7w"
                            style="@style/NavigationTextStyle"
                            android:paddingLeft="10dp"
                            android:text="@string/settings" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nav_BCB"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/navigation_item_background_drawable"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" >
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</android.support.v4.widget.DrawerLayout>