<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#aaa"
                android:orientation="horizontal" >

                <WebView
                    android:id="@+id/webView"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal" >

                    <ProgressBar
                        android:id="@+id/progressBar1"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:text="@string/loading"
                        android:textColor="#000"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
    <!-- The navigation drawer -->

    <FrameLayout
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/navgiation_background"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" >

        <ImageView
            android:id="@+id/imageViewShadow"
            android:layout_width="10dp"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:layout_marginLeft="3dp"
            android:src="@drawable/dropshadow" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/nav_agenda"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/navigation_item_background_drawable"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:paddingBottom="5dp"
                        android:paddingLeft="0dp"
                        android:paddingTop="5dp" >

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="50dp"
                            android:layout_height="40dp"
                            android:src="@drawable/agenda" />

                        <TextView
                            android:id="@+id/textView13"
                            style="@style/NavigationTextStyle"
                            android:paddingLeft="5dp"
                            android:text="@string/agenda" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nav_tweets"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/navigation_item_background_drawable"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:paddingBottom="5dp"
                        android:paddingLeft="0dp"
                        android:paddingTop="5dp" >

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="50dp"
                            android:layout_height="40dp"
                            android:src="@drawable/twitter" />

                        <TextView
                            android:id="@+id/textView2"
                            style="@style/NavigationTextStyle"
                            android:paddingLeft="5dp"
                            android:text="@string/tweets" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nav_update"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/navigation_item_background_drawable"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:paddingBottom="5dp"
                        android:paddingLeft="0dp"
                        android:paddingTop="5dp" >

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="50dp"
                            android:layout_height="40dp"
                            android:src="@drawable/updates" />

                        <TextView
                            android:id="@+id/textView3"
                            style="@style/NavigationTextStyle"
                            android:paddingLeft="5dp"
                            android:shadowColor="@android:color/black"
                            android:text="@string/updates" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/navigation_item_background_drawable"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/nav_venue"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:paddingBottom="5dp"
                        android:paddingLeft="0dp"
                        android:paddingTop="5dp" >

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="50dp"
                            android:layout_height="40dp"
                            android:src="@drawable/venue" />

                        <TextView
                            android:id="@+id/textView4"
                            style="@style/NavigationTextStyle"
                            android:paddingLeft="5dp"
                            android:text="@string/venue" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nav_internal_venue_map"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/navigation_item_background_drawable"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:paddingBottom="5dp"
                        android:paddingLeft="0dp"
                        android:paddingTop="5dp" >

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="50dp"
                            android:layout_height="40dp"
                            android:src="@drawable/internal_venue_left" />

                        <TextView
                            android:id="@+id/textView7"
                            style="@style/NavigationTextStyle"
                            android:paddingLeft="5dp"
                            android:text="@string/internal_venue" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nav_about"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/navigation_item_background_drawable"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:paddingBottom="5dp"
                        android:paddingLeft="0dp"
                        android:paddingTop="5dp" >
	
                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="50dp"
                            android:layout_height="40dp"
                            android:src="@drawable/about" />

                        <TextView
                            android:id="@+id/textView5"
                            style="@style/NavigationTextStyle"
                            android:paddingLeft="5dp"
                            android:text="@string/about" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nav_share"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/navigation_item_background_drawable"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:paddingBottom="5dp"
                        android:paddingLeft="0dp"
                        android:paddingTop="5dp" >

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="50dp"
                            android:layout_height="40dp"
                            android:src="@drawable/share" />

                        <TextView
                            android:id="@+id/textView6"
                            style="@style/NavigationTextStyle"
                            android:paddingLeft="5dp"
                            android:text="@string/share" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nav_settings"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/navigation_item_background_drawable"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:paddingBottom="5dp"
                        android:paddingLeft="0dp"
                        android:paddingTop="5dp" >

                        <ImageView
                            android:id="@+id/imageView7w"
                            android:layout_width="50dp"
                            android:layout_height="40dp"
                            android:src="@drawable/settings" />

                        <TextView
                            android:id="@+id/textView7w"
                            style="@style/NavigationTextStyle"
                            android:paddingLeft="5dp"
                            android:text="@string/settings" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nav_BCB"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/navigation_item_background_drawable"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" >
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</android.support.v4.widget.DrawerLayout>